--- a/frontend/src/components/RegisterPage.css
+++ b/frontend/src/components/RegisterPage.css
@@ -1,9 +1,10 @@
-body {
+.main{
     margin: 0;
     font-family: 'Arial', sans-serif;
     /* background: linear-gradient(to bottom right, #0f172a, #1e293b); */
     background-image: url('https://images.unsplash.com/photo-1448375240586-882707db888b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     color: #fff;
+    /* background-color: red; */
     display: flex;
     justify-content: center;
     align-items: center;
